--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoosastic": "^5.0.0",
     "mongoose": "^6.4.5",
     "morgan": "~1.9.1",
+    "node-fetch": "^3.2.9",
     "tslib": "^2.4.0"
   }
 }
